--- a/index.html
+++ b/index.html
@@ -159,12 +159,13 @@
                 <a href="RESUME RAJA BABU.pdf" download class="btn btn2"> Download CV</a>
             </div>
             <div class="contact-right">
-                <form action="">
-                    <input type="text" name="name" placeholder="Name"  required>
-                    <input type="email" name="email" placeholder="Yoir Email"  required>
-                    <textarea name="message"  rows="6" placeholder="Your message"></textarea>
+                <form name="submit-to-google-sheet">
+                    <input type="text" name="Name" placeholder="Name"  required>
+                    <input type="email" name="Email" placeholder="Yoir Email"  required>
+                    <textarea name="Message"  rows="6" placeholder="Your message"></textarea>
                     <button type="submit" class="btn btn2"> submit</button>
                 </form>
+                <span id="msg"></span>
             </div>
         </div>
     </div>
